--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://user1:hP3wZfWoSpLBGSdF@cluster0.bctvjs8.mongodb.net/libreria?retryWrites=true&w=majority&appName=Cluster0
+DB_URL=mongodb+srv://adminuser:ETMrvX5maPVmtXJ0@cluster0.xj1iwag.mongodb.net/tiendaDB?retryWrites=true&w=majority&appName=Cluster0
