--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-DB_URL=mongodb+srv://adminuser:ETMrvX5maPVmtXJ0@cluster0.xj1iwag.mongodb.net/tiendaDB?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=proyecto7SecretKey_XYZ
+
+DB_URL=mongodb+srv://adminuser:d6Yfn4WJfY1YpoFn@cluster0.xj1iwag.mongodb.net/tiendaDB?retryWrites=true&w=majority&appName=Cluster0
